--- a/src/styles/JobBoard.module.css
+++ b/src/styles/JobBoard.module.css
@@ -93,13 +93,7 @@
 
     .searchBar[type="search"]::-webkit-search-cancel-button {
         padding-right: 0px;
-      }
-
-    .searchBar::placeholder {
-        color: black;
-        font-size: 1em;
-        background: none !important;
-    }   
+      }  
 
     .searchBar {
         margin-bottom: 1em;
@@ -112,4 +106,10 @@
         border: 1px solid var(--bgDark);
         border-radius: 2px;
     }
+
+    .searchBar::placeholder {
+        color: black;
+        font-size: 1em;
+        background: url('');
+    } 
 }
